# myblog-proto-rust

./: .editorconfig  .gitignore  .gitmodules  Cargo.toml  LICENSE  Makefile  README.md  build.rs
src/: lib.rs  myblog.proto.auth.rs  myblog.proto.blog.rs  myblog.proto.discussion.rs  myblog.proto.storage.rs
