[package]
name = "myblog-proto-rust"
version = "0.0.8"
authors = ["Natcha Luangaroonchai <me@nomkhonwaan.com>"]
edition = "2018"
description = "Compiled Protocol Buffers from myblog-proto for Rust language"
repository = "https://github.com/nomkhonwaan/myblog-proto-rust"
license = "MIT"

[dependencies]
prost = "0.8"
prost-types = "0.8"
tonic = { git = "https://github.com/hyperium/tonic", branch = "master" }

[build-dependencies]
tonic-build = { git = "https://github.com/hyperium/tonic", branch = "master" }